--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "@chip/yup-validation-lib",
-  "version": "0.1.0",
+  "name": "@chiptoma/validation-lib",
+  "version": "0.1.3",
   "description": "A collection of validation helpers and rules, based on Yup.",
   "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --exit",
+    "test:watch": "mocha --watch",
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepublishOnly": "npm run lint && npm run test && npm run build"
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "keywords": [
     "chip",
@@ -30,7 +32,6 @@
     "@types/node": "^20.11.4",
     "@types/url-regex-safe": "^1.0.2",
     "@types/validator": "^13.11.8",
-    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "chai": "^5.0.0",
@@ -46,6 +47,7 @@
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-unicorn": "^50.0.1",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "esm": "^3.2.25",
     "globals": "^13.24.0",
     "mocha": "^10.2.0",
     "prettier": "^3.2.2",
