--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "license": "MIT",
   "devDependencies": {
     "@eslint/js": "^8.56.0",
+    "@tsconfig/node-lts": "^20.1.1",
+    "@tsconfig/strictest": "^2.0.2",
     "@types/chai": "^4.3.11",
     "@types/chai-as-promised": "^7.1.8",
     "@types/eslint": "^8.56.2",
