--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,37 +1,26 @@
 {
+  "extends": ["@tsconfig/node-lts/tsconfig.json", "@tsconfig/strictest/tsconfig.json"],
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node10",
     "typeRoots": ["./node_modules/@types", "./src/typings"],
     "types": ["global", "node", "mocha", "chai", "chai-as-promised"],
-    "baseUrl": ".",
-    "rootDir": "./src",
-    "outDir": "./dist",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "sourceMap": true,
     "incremental": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
     "useUnknownInCatchVariables": true,
     "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitOverride": true,
-    "skipDefaultLibCheck": false,
-    "skipLibCheck": true,
+    "baseUrl": ".",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "paths": {
       "@/*": ["./*"],
       "@src/*": ["./src/*"],
       "@typings": ["./src/typings"],
       "@helpers": ["./src/helpers"],
-      "@utils": ["./src/utils"]
+      "@utils/*": ["./src/utils/*"]
     }
   },
-  "include": ["src", "src/**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "include": ["src"]
 }
