--- a/package.json
+++ b/package.json
@@ -2,17 +2,6 @@
   "name": "@chiptoma/validation-lib",
   "version": "0.1.3",
   "description": "A collection of validation helpers and rules, based on Yup.",
-  "main": "./dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "scripts": {
-    "test": "mocha --exit",
-    "test:watch": "mocha --watch",
-    "build": "tsc -p tsconfig.build.json",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "prepublishOnly": "npm run lint && npm run build"
-  },
   "keywords": [
     "chip",
     "validation",
@@ -21,8 +10,16 @@
   ],
   "author": "Ciprian Toma <chip.dev.work@gmail.com>",
   "license": "MIT",
-  "overrides": {
-    "chai": "^5.0.0"
+  "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "scripts": {
+    "test": "mocha --exit",
+    "test:watch": "mocha --watch",
+    "build": "tspc -p tsconfig.build.json",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepublishOnly": "npm run lint && npm run build"
   },
   "devDependencies": {
     "@eslint/js": "^8.56.0",
@@ -52,12 +49,13 @@
     "eslint-plugin-sonarjs": "^0.23.0",
     "eslint-plugin-unicorn": "^50.0.1",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
-    "esm": "^3.2.25",
     "globals": "^13.24.0",
     "mocha": "^10.2.0",
     "prettier": "^3.2.2",
+    "ts-patch": "^3.1.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
     "email-regex-safe": "^4.0.0",
